rebrand to strength guider

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metric-gain-frontend",
+  "name": "strength-guider-frontend",
   "private": true,
   "version": "0.1.0",
   "type": "module",
